--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="10dp">
 
-        <com.anim.button.widget.AnimImageView
-            android:id="@+id/img_anim_button"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            app:firstDraw="@drawable/ic_heart"
-            app:secondDraw="@drawable/ic_heart_fill" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+
+            <com.anim.button.widget.AnimImageView
+                android:id="@+id/img_anim_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                app:firstDraw="@drawable/ic_heart"
+                app:secondDraw="@drawable/ic_heart_fill" />
+
+        </LinearLayout>
+
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
