--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,31 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <com.anim.button.widget.RippleImageView
+                android:id="@+id/img_ripple_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:rb_color="#ea4b2b"
+                app:rb_duration="3000"
+                app:rb_radius="8dp"
+                app:rb_rippleAmount="6"
+                app:rb_scale="3.2">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:gravity="center"
+                    android:text="click"
+                    android:textColor="#aaaaaa"
+                    android:textSize="10sp" />
+            </com.anim.button.widget.RippleImageView>
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
