--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,12 @@
         <attr name="secondDraw" format="reference" />
     </declare-styleable>
 
+    <!-- FillPopImageView -->
+    <declare-styleable name="FillPopImageView">
+        <attr name="firstView" format="reference" />
+        <attr name="secondView" format="reference" />
+    </declare-styleable>
+
     <!-- RippleImageView -->
     <declare-styleable name="RippleImageView">
         <attr name="rb_color" format="color" />
