--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,5 +89,21 @@
             </com.anim.button.widget.RippleImageView>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp">
+
+            <com.anim.button.widget.TransitionImageView
+                android:id="@+id/img_transition_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="#00aaaaaa" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
