--- a/app/src/main/res/layout/item_group_cell.xml
+++ b/app/src/main/res/layout/item_group_cell.xml
@@ -16,6 +16,7 @@
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
         android:text="标题10923"
+        android:textColor="#aaaaaa"
         android:textSize="12sp" />
 
     <View
@@ -30,7 +31,7 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="5.6%"
-        android:textColor="#b79364"
+        android:textColor="#ea4b2b"
         android:textSize="25sp" />
 
     <TextView
@@ -40,13 +41,14 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="标题2"
+        android:textColor="#aaaaaa"
         android:textSize="10sp" />
 
     <TextView
         android:id="@+id/tv_fundhome_purchase"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#b79364"
+        android:background="#ea4b2b"
         android:gravity="center"
         android:padding="5dp"
         android:text="按钮操作"
